--- a/arch/arm64/configs/lineageos_mido_defconfig
+++ b/arch/arm64/configs/lineageos_mido_defconfig
@@ -627,3 +627,8 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_INPUT_FPC1020=y
+CONFIG_FINGERPRINT_GOODIX_GF318M=y
+# CONFIG_FINGERPRINT_FPC1020 is not set
+# CONFIG_FINGERPRINT_FPC1020_TA is not set
